<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/rnp_background" android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="216dp"
        android:layout_height="310dp"
        android:layout_marginStart="135dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cl_frameList"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.541"
        app:srcCompat="@drawable/sirena_robotic_arm" />

    <SeekBar android:id="@+id/sb_motorAngle" android:layout_width="200dp" android:layout_height="22dp" android:max="285" android:progress="150" android:min="15" app:layout_constraintBottom_toTopOf="@+id/tv_motorNumber" app:layout_constraintStart_toEndOf="@+id/bt_sliderDec"/>

    <Button
        android:id="@+id/bt_motor2"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/motorbutton_background"
        android:onClick="onMotor2Click"
        android:text="@string/motor2"
        android:textColor="@color/buttonTextColor"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69" />

    <Button
        android:id="@+id/bt_gripper"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/motorbutton_background"
        android:onClick="motor_on_click"
        android:text="@string/gripper"
        android:textColor="@color/buttonTextColor"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.173" />

    <Button
        android:id="@+id/bt_motor5"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/motorbutton_background"
        android:onClick="onMotor5Click"
        android:text="@string/motor5"
        android:textColor="@color/buttonTextColor"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.003"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305" />

    <Button
        android:id="@+id/bt_motor4"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/motorbutton_background"
        android:onClick="onMotor4Click"
        android:text="@string/motor4"
        android:textColor="@color/buttonTextColor"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.004"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.436" />

    <Button
        android:id="@+id/bt_motor3"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/motorbutton_background"
        android:onClick="onMotor3Click"
        android:text="@string/motor3"
        android:textColor="@color/buttonTextColor"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/bt_motor4"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/bt_motor4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.57" />

    <Button
        android:id="@+id/bt_motor1"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/motorbutton_background"
        android:onClick="onMotor1Click"
        android:text="@string/motor1"
        android:textColor="@color/buttonTextColor"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.82" />

    <Button
        android:id="@+id/bt_recordFrame"
        android:layout_width="120dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_background"
        android:onClick="recordFrame_on_click"
        android:text="@string/recordFrame"
        android:textColor="@color/buttonTextColor"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_newFrame" />

    <Button
        android:id="@+id/bt_saveAction"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/button_background"
        android:onClick="saveAction_on_click"
        android:text="@string/saveAction"
        android:textColor="@color/buttonTextColor"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/bt_playAction"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/button_background"
        android:onClick="playAction_on_click"
        android:text="@string/playAction"
        android:textColor="@color/buttonTextColor"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_stop"
        app:layout_constraintStart_toEndOf="@+id/imageView2" />

    <Button
        android:id="@+id/bt_loadAction"
        android:layout_width="120dp"
        android:layout_height="38dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_background"
        android:onClick="loadAction_on_click"
        android:text="@string/loadAction"
        android:textColor="@color/buttonTextColor"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/bt_recordFrame"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/bt_newAction" />

    <Button
        android:id="@+id/bt_newFrame"
        android:layout_width="120dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/button_background"
        android:onClick="newFrame_on_click"
        android:text="Neutral Frame"
        android:textColor="@color/buttonTextColor"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_neutral"
        android:layout_width="120dp"
        android:layout_height="38dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_background"
        android:onClick="neutral_on_click"
        android:text="@string/neutral"
        android:textColor="@color/buttonTextColor"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_newAction"
        android:layout_width="120dp"
        android:layout_height="38dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/button_background"
        android:onClick="newAction_on_click"
        android:text="@string/newAction"
        android:textColor="@color/buttonTextColor"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/bt_newFrame"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_stop"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/button_background"
        android:onClick="stop_on_click"
        android:text="@string/stop"
        android:textColor="@color/buttonTextColor"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/bt_saveAction"
        app:layout_constraintStart_toEndOf="@+id/bt_playAction" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_frameList"
        android:layout_width="371dp"
        android:layout_height="242dp"
        android:layout_marginStart="-10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/framelist_background"
        android:clipChildren="false"
        android:clipToPadding="false"
        app:layout_constraintBottom_toTopOf="@+id/bt_saveAction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/bt_loadAction">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="Title:"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/bt_undo"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_marginStart="46dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="-35dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toStartOf="@+id/bt_redo"
            app:layout_constraintHorizontal_bias="0.715"
            app:layout_constraintStart_toEndOf="@+id/tv_title"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/undo" />

        <ImageButton
            android:id="@+id/bt_redo"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_marginTop="3dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.739"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/redo" />

        <ImageButton
            android:id="@+id/bt_loop"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="3dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.865"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/loop" />

        <ImageButton
            android:id="@+id/bt_delete"
            android:layout_width="40dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:background="@android:color/transparent"
            android:onClick="delete_on_click"
            android:padding="5dp"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toEndOf="@+id/bt_loop"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/delete" />

        <HorizontalScrollView
            android:id="@+id/sv_frameList"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/inner_framelist_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title">

            <LinearLayout
                android:id="@+id/ll_frames"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:orientation="horizontal" />
        </HorizontalScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <TextView android:id="@+id/tv_motorNumber" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="8dp" android:text="Motor 1" android:layout_marginStart="75dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="@+id/sb_motorAngle"/>

    <ImageButton
        android:id="@+id/bt_sliderDec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="24dp"
        android:onClick="dec_slider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@android:drawable/arrow_down_float" />
    <ImageButton android:id="@+id/bt_sliderInc" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="24dp" android:onClick="inc_slider" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toEndOf="@+id/sb_motorAngle" app:srcCompat="@android:drawable/arrow_up_float"/>

    <Button
        android:id="@+id/bt_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="360dp"
        android:background="@drawable/button_background"
        android:text="Disconnect"
        android:textColor="@color/buttonTextColor"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>
